# stas-ln-translator

./: CHANGELOG.md  LICENSE  LICENSE-Light-Novel-EPUB-Translator  README.md  pyproject.toml
.github/workflows/: release-please.yml
src/stas_ln_translator/: __init__.py  config.py  connection.py  process.py  translator.py  utils.py
