[project]
name = "stas-ln-translator"
version = "1.3.0"
description = "Alternative standalone Light Novel translator for Sugoi Translator."
readme = "README.md"
authors = [
    { name = "Muhd. Danial Danish Roslan", email = "distantwaterstream@gmail.com" }
]
requires-python = ">= 3.12, < 3.15"
license = "MIT"
license-files = ["LICENSE*"]
dependencies = [
    "beautifulsoup4>=4.13.4",
    "ebooklib>=0.19",
    "httpx>=0.28.1",
    "lxml>=6.0.0",
    "tqdm>=4.67.1",
]

[project.scripts]
stas-ln-translator = "stas_ln_translator:cli"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"
